[885/906] filter: free our data

plugs some memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=724816